--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </td>
                 <td>
                     <div class="card" style="width: 11rem;border: 2px solid rgb(5, 85, 5);box-shadow: 0px 0px 16px rgb(170, 245, 193);margin-left :4px;">
-                        <img src="C:\Users\IDEAL\Documents\010dev\HTML\images\63c405997e4055ec2bb84c63c4a50b05.jpg" class="card-img-top" alt="3">
+                        <img src="images\63c405997e4055ec2bb84c63c4a50b05.jpg" class="card-img-top" alt="3">
                         <div class="card-body">
                             <h5 class="card-title" style="font-size: small;"><b>قرآن کریم</b></h5>
                             <p class="card-text" style="font-size: small;"> ت والا ہے۔</p>
