--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Ramzaan</title>
 </head>
 
-<body>
+<body bgcolor="red">
     <nav class="navbar navbar-light bg-success fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="indx.html"><b>Ramzaan - رمضان</b></a>
