--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <script src="https://cdn.lordicon.com/lusqsztk.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/wxnxiano.json" trigger="click" colors="primary:#4d2c19,secondary:#08a88a" stroke="40" style="width:115px;height:115px">
                             </lord-icon>
-                            <a class="nav-link active" aria-current="page" href="#"> * Reading Quraan - قرآن پڑھنا </a>
+                            <a class="nav-link active" aria-current="page" href="#"> * test aarbaz abd ajee- قرآن پڑھنا </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#"> * Saher Iftar - سحر افطار</a>
